<resources>
    <string name="app_name">Mandiri Milenials Deposit</string>
    <string name="empty_string"></string>
    <string name="text_dummy_onboarding_title">Onboarding Title</string>
    <string name="text_dummy_onboarding_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="text_understood">Mengerti</string>
    <string name="text_login">Masuk</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_profile">Profile</string>
    <string name="life_plan">Life Plan</string>
    <string name="text_life_plan_history">Life Plan History</string>
    <string name="text_my_name">Nama Saya : %s</string>
    <string name="text_my_account_number">Rekening Saya : %s</string>
    <string name="text_create_life_plan">Buat Life Plan</string>
    <string name="text_see_all">Lihat Selengkapnya</string>
    <string name="text_school">Sekolah</string>
    <string name="text_dummy_duration">2 Tahun Lagi</string>
    <string name="text_dummy_presentage">50%</string>
    <string name="text_value_title">Nilai Masa Depan</string>
    <string name="text_current_value">Terkumpul</string>
    <string name="dummy_future">Rp 100.000.000</string>
    <string name="text_menabung">Menabung</string>
    <string name="text_do_saving">Tabung</string>
    <string name="text_no_internet">Maaf tidak ada koneksi internet</string>
    <string name="text_life_plan_desc">Kamu belum mempunyai atau membuat life plan. Buat sekarang dan rasakan kemudahan
        menabung dari sekarang
    </string>
    <string name="text_dummy_scholl">Sekolah</string>
    <string name="text_dummy_plan">Target Biaya Rp. 100.000.000 dalam 2 tahun</string>
    <string name="text_dummy_plan_price">Rp.100.000.000/ Bulan</string>
    <string name="text_add_plan_desc">Pilih sesuai kebutuhan anda</string>
    <string name="text_add_plan_package_desc">Target Biaya %1s dalam %2s</string>
    <string name="text_add_nominal_package">%s/ Bulan</string>
    <string name="text_month">Bulan</string>
    <string name="text_year">Tahun</string>
    <string name="text_name">Nama : %s</string>
    <string name="text_phone">Nomor HP : %s</string>
    <string name="text_address">Alamat : %s</string>
    <string name="text_email">Email : %s</string>
    <string name="text_verification">Verifikasi</string>
    <string name="text_verification_desc">Sebelum melakukan pembukaan rekening baru. Kam akan melakukan verifikasi
        untuk memastikan bahwa yang melakukan pembukaan rekening adalah anda sendiri +
    </string>
    <string name="text_verification_document">Mohon siapkan beberapa dokumen pendukung, antara lain :</string>
    <string name="text_ktp">- KTP</string>
    <string name="text_face">- Foto Wajah</string>
    <string name="tv_signature">- Tanda Tangan</string>
    <string name="text_understood_go">Mengerti dan Lanjutkan</string>
    <string name="text_verification_title">Apakah kamu yakin menambahkan Life Plan untuk %s ?</string>
    <string name="text_yes">Lanjutkan</string>
    <string name="text_no">Tidak</string>
    <string name="text_saving_info">Info Tabungan</string>
    <string name="dummy_savin">Rp 100.000.000,0</string>
    <string name="text_ktp_verification">Verifikasi KTP</string>
    <string name="text_take_ktp">Ambil Gambar KTP</string>
    <string name="text_selfie_verification">Verifikasi Foto Diri</string>
    <string name="text_selfie">Ambil Foto Selfie</string>
    <string name="text_take_signature">Ambil Foto Tanda Tangan</string>
    <string name="text_verifikasi_tanda_tangan">Verifikasi Tanda Tangan</string>
    <string name="text_waiting_call">Menunggu Panggilan : %s</string>
    <string name="settings_name" translatable="false">Settings</string>
    <string name="start_description">Click the button below to initiate a WebRTC video call.</string>
    <string name="join_description">Go to https://appr.tc/ to join the room just created during the step above, using
        its random room ID displayed in this app.
    </string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or
        enable capturing to texture in the options.
    </string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_settings">Settings</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Default</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
</resources>