<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
                android:id="@+id/nav_profile"
                android:title="@string/text_profile"/>
        <item
                android:id="@+id/nav_lifeplan"
                android:title="@string/life_plan"/>
        <item
                android:id="@+id/nav_history_lifeplan"
                android:title="@string/text_life_plan_history"/>
    </group>

    <group android:checkableBehavior="none">
        <item android:id="@+id/action_logout"
              android:title="Logout"
              android:orderInCategory="100"
              app:showAsAction="always"/>
    </group>
</menu>
