<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".section.verification.VerificationIntroductionActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/default_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/text_verification"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/DefaultMargin"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_title"
            android:fontFamily="@font/myriadpro_bold"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/text_verification_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/DefaultMargin"
            android:id="@+id/tv_description"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/text_verification_document"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/DefaultMargin"
            android:id="@+id/tv_desc_document"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/text_ktp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_document"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/DefaultMargin"
            android:id="@+id/tv_ktp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/text_face"
            app:layout_constraintTop_toBottomOf="@id/tv_ktp"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/DefaultMargin"
            android:id="@+id/tv_face"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:text="@string/tv_signature"
            app:layout_constraintTop_toBottomOf="@id/tv_face"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/DefaultMargin"
            android:id="@+id/tv_signature"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_understood_go"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:id="@+id/btn_add_life_plan"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button_yellow_active"
            android:layout_height="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>