<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tv_verification_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/text_verification_title"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:fontFamily="@font/myriadpro_regular"
            android:layout_height="wrap_content"/>

    <TextView
            app:layout_constraintTop_toBottomOf="@id/tv_verification_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/tv_amount"
            android:textAlignment="center"
            tools:text="Rp. 40.000,00"
            android:fontFamily="@font/myriadpro_bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="0dp"
            android:id="@+id/btn_yes"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:text="@string/text_yes"
            android:fontFamily="@font/myriadpro_bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button_blue_active"
            app:layout_constraintRight_toLeftOf="@id/btn_no"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount"
            android:layout_height="40dp"/>

    <Button
            android:layout_width="0dp"
            android:id="@+id/btn_no"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_no"
            android:fontFamily="@font/myriadpro_bold"
            android:textColor="@color/colorBlack"
            android:background="@drawable/rounded_button_inactive"
            app:layout_constraintLeft_toRightOf="@id/btn_yes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_amount"
            android:layout_height="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>