<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        style="@style/DefaultMargin"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_dummy_scholl"
                android:fontFamily="@font/myriadpro_bold"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_plan_for_title"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                app:layout_constraintRight_toLeftOf="@id/img_arrow"
                android:layout_height="wrap_content"/>

        <ImageView
                app:layout_constraintBottom_toBottomOf="@id/tv_plan_for_title"
                app:layout_constraintTop_toTopOf="@id/tv_plan_for_title"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/ic_arrow_drop_down"
                app:tint="@color/colorBlack"
                android:id="@+id/img_arrow"
                android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/tv_plan_for_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/text_dummy_plan"
                    android:fontFamily="@font/myriadpro_regular"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_plan_desc"
                    android:layout_marginEnd="10dp"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="0dp"
                    app:layout_constraintRight_toLeftOf="@id/btn_saving"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_plan_desc"
                    android:text="@string/text_dummy_plan_price"
                    android:fontFamily="@font/myriadpro_semibold"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_plan_price"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>


            <Button
                    app:layout_constraintTop_toTopOf="@id/tv_plan_price"
                    app:layout_constraintBottom_toBottomOf="@id/tv_plan_price"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:id="@+id/btn_saving"
                    android:textSize="12sp"
                    android:background="@drawable/rounded_button_yellow_active"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/myriadpro_semibold"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/text_do_saving"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>